manifiesto terminado y ajustes en asignar viaje

--- a/css/style.css
+++ b/css/style.css
@@ -369,6 +369,16 @@ tr:nth-child(even){
 #containerTablaHabilitar{
   display: none;
 }
+#containerTable{
+  display: none;
+}
+#containerTablePeligrosa{
+  display: none;
+}
+
+#titleListaPeligrosa{
+  display: none;
+}
 
 #tablaCargPeligrosa{
   display: none;
