Falta solo ordenar fechas, y porcentaje de empresas, por parte del IMPORTADOR

--- a/css/style.css
+++ b/css/style.css
@@ -79,7 +79,7 @@
   .parrafoImagen{
     font-size: 15px;
     margin-bottom: 20px;
-    color: #1f53c5;
+    color: grey;
   }
 
   .importador{
@@ -398,5 +398,10 @@ tr:nth-child(even){
 
 #formRechazarSolicitud{
   display: none;
+}
+
+.errMsg{
+  color: red;
+  font-weight: bold;
 }
 
